standardize API JSON response keys to camelCase
